ProductionSetup/podDeployment.yml
# poddeployment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poddeployment
  labels:
    app: poddeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poddeployment
  template:
    metadata:
      labels:
        app: poddeployment
    spec:
      serviceAccountName: poddeployment-sa
      containers:
      - name: poddeployment
        image: piyushgpt/repl-pod-deployment:06377ba049460c41254e54674014442392a40ab8
        ports:
        - containerPort: 4001
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: poddeployment
spec:
  selector:
    app: poddeployment
  ports:
  - port: 4001
    targetPort: 4001
  type: ClusterIP
