ProductionSetup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeflux-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "codefluxcloud.in"
    - "www.codefluxcloud.in"
    - "api.codefluxcloud.in"
    - "poddeployment.codefluxcloud.in"
    secretName: codeflux-tls
  rules:
  - host: codefluxcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: www.codefluxcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.codefluxcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 3000
  - host: poddeployment.codefluxcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poddeployment
            port:
              number: 4001
